# org-service

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  dev-requirements.txt  docker-compose.yml  models.py  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 1874bbd75009_initial_schema.py  b9de3ee8e003_initial_schema.py
docs/: implementation-status.md
kubernetes/: deployment.yaml  prometheus-servicemonitor.yaml
org_service/: config.py  db.py  logging_config.py  main.py
org_service/devtools/: README.md
org_service/middleware/: jwt_middleware.py  metrics_middleware.py  request_id_middleware.py
org_service/models/: __init__.py  account.py  user.py
org_service/routes/: auth_routes.py  secure_routes.py
org_service/schemas/: __init__.py  auth.py  health.py  user.py
org_service/services/: auth_service.py
org_service/utils/: jwt.py
tasks/: CODE-STANDARDS.md  ENFORCEMENT.md  FUTURE-ENHANCEMENTS.md  TODO.md  code-quality-debt.md  missing-features.md  p0-critical.md  p1-high.md  p2-medium.md  p3-low.md
tests/: conftest.py  utils.py
tests/middleware/: test_jwt_middleware.py
tests/routes/: test_auth_routes.py  test_secure_routes.py
tests/utils/: jwt.py  test_db.py
